(executables
 (names scilla_runner
         eval_runner
         type_checker
         scilla_checker
         scilla_profiler)
 (public_names scilla-runner
                eval-runner
                type-checker
                scilla-checker
                scilla-profiler)
  (package scilla)
  (modules scilla_runner
            eval_runner
            type_checker
            scilla_checker
            scilla_profiler
            cli RunnerUtil)
  (libraries core
              core_profiler
              angstrom
              ppx_sexp_conv ppx_deriving
              ppx_let yojson cryptokit
              fileutils
              scilla_base scilla_eval scilla_checkers scilla_cpp_deps scilla_mock_server)
  (preprocess (pps ppx_sexp_conv ppx_let ppx_deriving.show bisect_ppx -conditional)))
